--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "express": "^4.17.1",
+    "express-http-proxy":"1.6.3",
     "material": "^0.4.3",
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "typescript": "~3.9.5",
     "zone.js": "~0.10.3"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
