--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.0.4",
     "express": "^4.17.1",
     "express-http-proxy":"1.6.3",
+    "http-proxy-middleware":"2.0.1",
     "material": "^0.4.3",
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
